dev: avoid cls
cumulative layout shift

--- a/front/src/app/routes/home/home.component.scss
+++ b/front/src/app/routes/home/home.component.scss
@@ -1,3 +1,6 @@
-.button {
-    text-decoration: none;
+:host {
+    display: flex;
+    flex: 1;
+    flex-flow: column;
+    justify-content: center;
 }
